--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ a {
     font-family: 'Roboto-Thin';
     color: var(--gris);
     margin: 0;
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 #inicio .accion h4 {
     font-family: 'Roboto-Black';
@@ -223,12 +224,18 @@ section#inicio div#entrada a {
     background-color: var(--purpura);
     color: var(--gris);
 }
+#info-programacion h2{
+	font-family: 'Roboto-Thin';
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
 
 #info-entradas{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--marron);
+    /* background-color: var(--gris); */
+    /* background-color: #6b371a; */
+	background: linear-gradient( 20deg, var(--marron), #632e12);
     color: var(--gris);
 }
 
@@ -283,7 +290,7 @@ section#inicio div#entrada a {
 	margin: 0;
 }
 
-.card-horizontal div:first-of-type {
+.card-horizontal > div:first-of-type {
 	padding: 1rem 2rem;
 	gap: .5rem;
 }
@@ -306,6 +313,11 @@ section#inicio div#entrada a {
     transform: scale(1.15);
 	color: var(--gris);
 	box-shadow: 0px 0px 20px var(--dark-blue);
+}
+#info-sedes h2,
+#info-sedes h3 {
+	margin: 0;
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 
@@ -345,6 +357,11 @@ section#inicio div#entrada a {
 #info-entradas h2 {
 	font-family: 'Roboto-Thin';
 	margin: 0;
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.char {
+	/* transform: translateY(115px); */
+	transition: transform .5;
 }
 #info-entradas p {
 	margin-bottom: 2rem;
@@ -393,13 +410,14 @@ section#inicio div#entrada a {
 	width: 250px;
 	display: inline-block;
 	cursor: pointer;
-	padding: 50px 0;
+	padding: 50px 0 25px;
 	text-align: center;
 	margin: 5px;
 	border-radius: 0;
 	background-color: transparent;
 	overflow: hidden;
 	transition: all 250ms linear;
+	justify-content: space-around;
 }
 .checkbox-ticket:checked + label:before,
 .checkbox-ticket:not(:checked) + label:before{
@@ -411,7 +429,7 @@ section#inicio div#entrada a {
 	height: 100%;
 	z-index: -1;
 	display: block;
-	background-image: linear-gradient(335deg, var(--marron), var(--amarillo));
+	background: var(--amarillo);
 }
 .checkbox-ticket:not(:checked) + label:after{
 	content: '';
@@ -470,9 +488,10 @@ section#inicio div#entrada a {
     border: 2.2px solid #f4f4f47c;
 }
 .checkbox-ticket + label .price{
-	font-family: 'Roboto-Lifht', sans-serif;
+	font-family: 'Roboto-Black', sans-serif;
 	font-size: 40px;
 	line-height: 1;
+	letter-spacing: -3.5px;
 	text-transform: uppercase;
 	color: var(--marron);
 	display: block;
@@ -500,7 +519,7 @@ section#inicio div#entrada a {
 	transition: all 250ms linear;
 }
 .checkbox-ticket + label .time {
-	font-family: 'Roboto-Regular', sans-serif;
+	font-family: 'Roboto-Light', sans-serif;
 	font-weight: 700;
 	font-size: 15px;
 	line-height: 1;
@@ -508,6 +527,8 @@ section#inicio div#entrada a {
 	color: var(--marron);
 	display: block;
 	transition: all 250ms linear;
+	border-top: 5.5px dotted;
+	padding-top: 1.3rem;
 }
 .top-dots,
 .bottom-dots {
@@ -666,6 +687,12 @@ section#inicio div#entrada a {
 
 .entradas-tickets{
 	margin-bottom: 3rem;
+	padding: 3rem 0rem;
+	border-radius: 20px;
+	box-shadow: 0px 0px 20px #1f2029;
+	background: var(--marron);
+	background: radial-gradient(circle, var(--marron), var(--marron-oscuro));
+	/* background: radial-gradient(circle, var(--amarillo-op-70), var(--bordo)) */
 }
 
 .entradas-tickets label img:first-of-type {
@@ -680,13 +707,20 @@ section#inicio div#entrada a {
 }
 
 #info-entradas .entradas-tickets label{
-	transition: all 0.3s;
+	display: flex;
 	border: none;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+	border-radius: 10px;
+	transition: all 0.3s;
 }
 
 @media (hover:hover) {
 	#info-entradas .entradas-tickets label:hover{
-		transform:scale(1.09)
+		transform:scale(1.09);
+		box-shadow: 0px 0px 60px #000;
+		rotate: 5deg;
 	}
 }
 
@@ -751,7 +785,16 @@ footer #int img {
 	}
 }
 
+#nav-trigger {
+    height: 100px; 
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
 #navegador{
+	display: flex;
 	align-items: center;
 	position: fixed;
 	top: 20px;
@@ -764,6 +807,7 @@ footer #int img {
 	background-color: var(--amarillo-op-70);
 	backdrop-filter: blur(3.5px);
 	z-index: 999;
+	opacity: 1;
 }
 
 #navegador ul {
@@ -892,13 +936,119 @@ footer #int img {
 	filter: grayscale(100%);
 }
 
+
+/* OBRAS */
+
+
 #obras {
+	/* width: auto; */
 	display: flex;
-	gap: 2rem;
 	padding: 5rem 0rem;
+	gap: 2rem;
     justify-content: center;
     align-items: center;
-	height: 90vh;
+	overflow-x: hidden;
+	position: relative;
+
     background-color: var(--purpura);
     color: var(--gris);
+	
+	* {
+		box-sizing: border-box;
+	}
 }
+
+#obras h2 {
+	font-family: 'Roboto-Thin';
+	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+
+#obras > div:first-of-type {
+	display: flex;
+	width: 95vw;
+	flex-direction: column;
+	align-items: center;
+	/* box-shadow: 1px 10px 30px #00000071; */
+}
+
+#obras div.slider {
+    display: flex;
+    gap: 2rem;
+    overflow: hidden;
+    height: max-content;
+	width: auto;
+	/* width: 100%; */
+
+    scrollbar-width: none;
+	scroll-behavior: smooth;
+}
+
+#obras div.slider article {
+	width: 100vw;
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 100%;
+    /* gap: 0; */
+    justify-content: start;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+#obras div.slider article div {
+	height: auto;
+	width: 50vw;
+}
+
+#obras div article div img {
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	object-fit: cover;
+}
+
+#obras div.slider::-webkit-scrollbar {
+    display: none;
+}
+
+#obras .slider-container{
+	/* width: 300vw; */
+	width: 100%;
+	padding: 0rem 2rem;
+	overflow: hidden;
+}
+
+.info-obras {
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: start;
+	padding: 2.5rem 2rem 1rem;
+	background-color: var(--gris);
+}
+.info-obras p {
+	padding-top: 1rem;
+	overflow: auto;
+}
+
+div article .info-obras h4,
+div article .info-obras h6,
+div article .info-obras p {
+	margin: 0;
+	color: var(--bordo);
+}
+#obras div article h6:first-of-type{
+	font-family: 'Roboto-Light';
+}
+#obras div article h6{
+	text-transform: uppercase;
+}
+
+
+/* Pruebas dentro de Obras */
+
+
+/* Fin Pruebas dentro de Obras */
+
+
+
+/* FIN OBRAS */
