--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -16,17 +16,23 @@
         width: 200vw;
     }
 
+    .entradas-tickets label img:first-of-type {
+        width: 10vw;
+    }
+
+
     div.accion {
         padding: 0rem .8rem;
     }
     
     div.accion .btn-accion {
-        width: 100%;
-        height: 80px;
+        position: absolute;
+        bottom: 5rem;
+        width: fit-content;
+        height: 60px;
         gap: 0;
         border-radius: 5px;
         overflow: hidden;
-        margin-top: 5rem;
     }
     
     div.accion .btn-accion #programacion,
@@ -37,6 +43,10 @@
         justify-content: center;
         align-items: center;
         border-radius: 0px;
+    }
+
+    div.accion .btn-accion #programacion {
+        padding: .5rem 1rem;
     }
 
     section#inicio h2:first-of-type {
@@ -155,6 +165,56 @@
     
     #info-sedes > a {
         margin: 1rem .5rem 0rem;
+    }
+
+    .sedes-general {
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+    .sedes-general > div:nth-child(2) {
+        position: relative;
+        top: 8rem;
+        height: fit-content;
+        left: 12rem;
+        z-index: 99;
+    }
+
+    #obras {
+        padding: 5rem 0rem 0rem;
+    }
+
+    #obras .slider-container {
+        padding: 0rem .5rem;
+    }
+    
+    #obras div.slider article {
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+
+    #obras div.slider article div {
+        width: 100%;
+    }
+
+    #obras div article div img {
+        height: max-content;
+        width: 100%;
+    }
+
+    #sedes {
+        padding: 0rem 0rem 5rem;
+        margin-bottom: 4rem;
+    }
+
+    #sedes img {
+        height: 30vw;
+    }
+
+    .sedes-info {
+        left: 0rem;
+        width: fit-content;
+        z-index: 99;
+        bottom: -5rem;
     }
 }
 
